# seedsync

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MODERNIZATION_PLAN.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-angular-21.yml  ci-develop.yml  ci.yml  docker-image.yml  docs-pages.yml
doc/: DeveloperReadme.md
src/angular/: README.md  angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
src/angular-v17/: angular.json  package.json
src/angular-v17/src/app/: app.component.ts
src/angular-v17/src/environments/: environment.ts
src/angular/public/: theme-init.js
src/angular/src/: index.html  styles.scss
src/angular/src/app/: app.component.html  app.component.scss  (+6 more)
src/e2e/: README.md
src/e2e-playwright/: package-lock.json  package.json  playwright.config.ts
src/e2e-playwright/tests/: about.spec.ts  autoqueue.spec.ts  dashboard.spec.ts  error-states.spec.ts  file-actions.spec.ts  fixtures.ts  integrations.spec.ts  logs.spec.ts  navigation.spec.ts  path-pairs.spec.ts  settings.spec.ts  theme.spec.ts
src/pyinstaller_hooks/: hook-patoolib.py
src/python/: mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  scan_fs.py  scanfs.py  seedsync.py
src/python/.local/share/lftp/: rl_history
src/python/common/: __init__.py  app_process.py  config.py  config_secrets.py  constants.py  context.py  error.py  integrations_config.py  job.py  json_formatter.py  multiprocessing_logger.py  path_pairs_config.py  persist.py  remote_path_utils.py  status.py  types.py
src/python/controller/: __init__.py  arr_notifier.py  auto_queue.py  command_pipeline.py  controller.py  controller_job.py  controller_persist.py  exclude_patterns.py  model_builder.py  model_registry.py  model_updater.py  notification_formatters.py  notifier.py  pair_context.py  persist_keys.py  stats_recorder.py
src/python/controller/delete/: delete_process.py
src/python/controller/extract/: __init__.py  dispatch.py  extract.py  extract_process.py  extract_request.py
src/python/controller/move/: __init__.py  move_process.py
src/python/controller/scan/: __init__.py  active_scanner.py  local_scanner.py  remote_scanner.py  scanner_process.py
src/python/controller/validate/: __init__.py  validate_process.py
src/python/docs/: faq.md  index.md  install.md
src/python/lftp/: __init__.py  job_status.py  job_status_parser.py  lftp.py
src/python/model/: diff.py  file.py  model.py
src/python/ssh/: __init__.py  sshcp.py
src/python/system/: file.py  scanner.py
src/python/tests/: conftest.py
src/python/tests/integration/test_controller/: test_controller.py
src/python/tests/integration/test_controller/test_extract/: test_extract.py
src/python/tests/integration/test_lftp/: test_lftp.py
src/python/tests/integration/test_web/: test_web_app.py
src/python/tests/integration/test_web/test_handler/: test_auto_queue.py  test_config.py  test_controller.py  test_integrations.py  test_logs.py  test_notifications.py  test_path_pairs.py  test_server.py  test_stats.py  test_status.py  test_stream_log.py  test_stream_model.py  test_stream_status.py
src/python/tests/unittests/: test_scanfs.py  test_seedsync.py
src/python/tests/unittests/test_common/: test_app_process.py  test_config.py  test_config_secrets.py  test_context.py  test_integrations_config.py  test_job.py  test_multiprocessing_logger.py  test_path_pairs_config.py  test_persist.py  test_remote_path_utils.py  test_status.py
src/python/tests/unittests/test_controller/: test_arr_notifier.py  test_auto_queue.py  test_command_pipeline.py  test_controller_lock.py  test_controller_persist.py  test_exclude_patterns.py  test_model_builder.py  test_model_registry.py  test_model_updater.py  test_move_process.py  test_notification_formatters.py  test_notifier.py  test_pair_context.py  test_persist_keys.py  test_stats_recorder.py  test_validate_config.py
src/python/tests/unittests/test_controller/test_delete/: test_delete_process.py
src/python/tests/unittests/test_controller/test_extract/: test_dispatch.py  test_extract.py  test_extract_process.py
src/python/tests/unittests/test_controller/test_scan/: test_active_scanner.py  test_local_scanner.py  test_remote_scanner.py  test_scanner_process.py
src/python/tests/unittests/test_controller/test_validate/: test_validate_process.py
src/python/tests/unittests/test_lftp/: test_job_status.py  test_job_status_parser.py  test_lftp.py  test_lftp_queue_command.py
src/python/tests/unittests/test_model/: test_diff.py  test_file.py  test_model.py
src/python/tests/unittests/test_ssh/: test_shell_detect.py  test_sshcp.py  test_sshcp_remote_address.py
src/python/tests/unittests/test_system/: test_file.py  test_scanner.py
src/python/tests/unittests/test_web/: test_security.py  test_web_app_job.py  test_web_app_stream.py
src/python/tests/unittests/test_web/test_handler/: test_stream_log.py
src/python/tests/unittests/test_web/test_serialize/: test_serialize.py  test_serialize_auto_queue.py  test_serialize_config.py  test_serialize_log_record.py  test_serialize_model.py  test_serialize_status.py
src/python/typings/bottle/: __init__.pyi
src/python/typings/pexpect/: __init__.pyi  exceptions.pyi
src/python/typings/tblib/: __init__.pyi  pickling_support.pyi
src/python/web/: security.py  utils.py  web_app.py  web_app_builder.py  web_app_job.py
src/python/web/handler/: auto_queue.py  config.py  controller.py  integrations.py  logs.py  notifications.py  path_pairs.py  server.py  stats.py  status.py  stream_log.py  stream_model.py  stream_status.py
src/python/web/serialize/: serialize.py  serialize_auto_queue.py  serialize_config.py  serialize_log_record.py  serialize_model.py  serialize_status.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  wrangler.toml
website/docs/: configuration.md  faq.md  index.md  installation.md  usage.md
website/src/css/: custom.css
(+171 files in other folders)
