[project]
name = "seedsync"
version = "0.0.0"
description = "File synchronization tool for seedboxes"
requires-python = ">=3.12"
dependencies = [
    "bottle>=0.12,<1.0",
    "pexpect>=4.9.0",
    "tblib>=3.2.2",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "parameterized>=0.9",
    "testfixtures>=11.0.0",
    "webtest>=3.0",
    "timeout-decorator>=0.5",
    "pytest-timeout>=2.4.0",
]
dev = [
    "ruff>=0.15.10",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "UP032", # f-string — 305 auto-fixable occurrences, separate PR (#399 Phase 2)
    "UP046", # non-pep695-generic-class — requires Python 3.12+ syntax migration
    "B904",  # raise-without-from — 25 manual fixes, separate PR (#399 Phase 3)
    "B024",  # abstract-base-class-without-abstract-method — intentional pattern
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]  # re-exports, import order is load-order sensitive
"tests/**" = ["W291"]  # trailing whitespace in test string literals (lftp output data)
"tests/**/test_job_status_parser.py" = ["E501"]  # long lines are lftp output test data
"model/file.py" = ["E721"]  # intentional type() comparisons for enum-style state checks
"scan_fs.py" = ["UP006", "UP035", "UP045"]  # must use typing.List/Optional for Python 3.5 compat on remote

[tool.ruff.lint.isort]
known-first-party = ["common", "controller", "model", "lftp", "ssh", "web", "system"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests/unittests"]
