[project]
name = "seedsync"
version = "0.0.0"
description = "File synchronization tool for seedboxes"
requires-python = ">=3.12"
dependencies = [
    "bottle>=0.12,<1.0",
    "pexpect>=4.9.0",
    "tblib>=3.2.2",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "parameterized>=0.9",
    "testfixtures>=11.0.0",
    "webtest>=3.0",
    "timeout-decorator>=0.5",
    "pytest-timeout>=2.4.0",
]
dev = [
    "ruff>=0.15.10",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "PERF", # perflint
    "RUF",  # ruff-specific
]
ignore = [
    "UP046",  # non-pep695-generic-class — requires Python 3.12+ syntax migration
    "B024",   # abstract-base-class-without-abstract-method — intentional pattern
    "SIM102", # collapsible-if — nested ifs are often more readable
    "SIM108", # if-else-block-instead-of-if-exp — ternaries hurt readability for complex conditions
    "SIM115", # open-file-with-context-handler — false positives in loops and try/except patterns
    "RET504", # unnecessary-assign — intermediate variables aid readability
    "PERF401",# manual-list-comprehension — some loops have conditionals that don't fit comprehensions
    "RUF012", # mutable-class-default — false positives for constant class-level dicts/lists
    "RUF003", # ambiguous-unicode-character-comment — intentional unicode in test data and comments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]  # re-exports, import order is load-order sensitive
"tests/**" = ["W291", "SIM117", "RUF059"]  # trailing whitespace in test data; nested with; structural unpacking
"tests/**/test_job_status_parser.py" = ["E501"]  # long lines are lftp output test data
"model/file.py" = ["E721"]  # intentional type() comparisons for enum-style state checks
"scan_fs.py" = ["UP006", "UP035", "UP045"]  # must use typing.List/Optional for Python 3.5 compat on remote

[tool.ruff.lint.isort]
known-first-party = ["common", "controller", "model", "lftp", "ssh", "web", "system"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests/unittests"]
